--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,13 @@
 {
   "name": "jquery.html5loader",
-  "version": "1.6.7",
+  "version": "1.6.8",
   "main": "src/jquery.html5Loader.js",
   "ignore": [
     "**/.*",
     "node_modules",
     "components",
     "files",
-    "examples"
+    "examples",
+    "lib"
   ]
 }
